# metapandas

./: .codacy.yml  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .jshintignore  .prospector.yml  .remarkrc  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: actions.yml  autopep8.yml  sphinx-docs.yml
.theia/: launch.json  settings.json
docs/: Makefile
docs/source/: conf.py  index.rst
hooks/: pre-commit
metapandas/: __init__.py  auto.py  config.py  metadata.py  metadataframe.py  util.py
metapandas/hooks/: manager.py  pandas.py
test/: test_auto.py  test_config.py  test_hooks_geopandas.py  test_hooks_manager.py  test_hooks_pandas.py  test_metadata.py  test_metadataframe.py  test_util.py
