[metadata]
name = metapandas
author = Liam Deacon
author-email = liam.deacon@lightbytestechnology.co.uk
summary = Augemented pandas for tracking JSON metadata
license = MIT
description-file =
    README.md
home-page = https://github.com/LightBytes/metapandas
requires-python = >=3.5
publisher = Light Bytes Technology Ltd.
classifier = 
    Development Status :: 4 - Beta
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Science/Research
    Intended Audience :: Developers